[profile.release]
lto = true

[package]
name = "oj-environment-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algolib-rust = { path = "external/algolib-rust" }
ac-library-rs = "=0.1.1"
num = "=0.4.1"
proconio = { version = "=0.4.5", features = ["derive"] }
